--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,16 @@
     <%- body %>
     <%- include ./partials/registerModal %>
   </main>
-
+  <footer>
+    <section class="hero is-primary foot">
+      <div class="hero-body">
+        <div class="container">
+          <h2 class="Subtitle">
+            Made by Louis Boyle at General Assembly
+          </h2>
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
