--- a/views/statics/account.ejs
+++ b/views/statics/account.ejs
@@ -143,7 +143,7 @@
   $(() => {
     function changeAccForm() {
         function clickTitleAcc() {
-        $('.changeAccount').on('click', () => {
+        $('.changeAccountBtn').on('click', () => {
           $('.formPanel').slideToggle('fast');
         });
       }
